Update LavaPlayer to resolve youtube ciphers.